# DEEPFOLD-SOLVER

./: .gitignore  PRESOLVE_BUNDLE_HANDOFF.md  PRESOLVE_BUNDLE_PLAN.md  README.ja.md  README.md  README.zh.md  USER_GUIDE.md  USER_GUIDE.zh.md  index.html  package-lock.json  package.json
core/: CMakeLists.txt
core/cuda/: cfr_kernel.cu  eval_kernel.cu  gpu_backend.cu  util.cuh
core/include/: card.h  cpu_backend.h  cpu_backend_levelized.h  cpu_simd.h  fold_blocker.h  game_tree_builder.h  gpu_backend.h  hand_evaluator.h  isomorphism.h  memory_budget.h  showdown_rank_blocker.h  solver.h  solver_backend.h  solver_decomposed.h  types.h
core/src/: backend_factory.cpp  cpu_kernels_avx2.cpp  cpu_kernels_dispatch.cpp  cpu_kernels_scalar.cpp  hand_evaluator.cpp  main.cpp
core/tests/: bench_showdown_batch.cpp  bench_showdown_encoding.cpp  cli_enumerated_parity.cmake  cli_lock_determinism.cmake  cli_stitched_nav_roots.cmake  test_cpu_kernels.cpp  test_decomposition.cpp  test_evaluator.cpp  test_gpu_postsolve.cpp  test_parity.cpp  test_solver.cpp  test_tree.cpp
gto_output/cash/6max_100bb_2_5x_500rake/RFI/BTN/: BTN.json
gto_output/cash/6max_100bb_2_5x_500rake/RFI/CO/: CO.json
gto_output/cash/6max_100bb_2_5x_500rake/RFI/MP/: MP.json
gto_output/cash/6max_100bb_2_5x_500rake/RFI/SB/: SB.json
gto_output/cash/6max_100bb_2_5x_500rake/RFI/UTG/: UTG.json
gto_output/cash/6max_100bb_2_5x_500rake/vs_3B/BB/: BTN_2.5bb_SB_11.0bb_BB.json  CO_2.5bb_BTN_8.5bb_BB.json  CO_2.5bb_BTN_Call_SB_13.0bb_BB.json  CO_2.5bb_SB_11.0bb_BB.json  MP_2.5bb_BTN_8.5bb_BB.json  MP_2.5bb_BTN_Call_SB_13.0bb_BB.json  MP_2.5bb_CO_8.5bb_BB.json  MP_2.5bb_SB_11.0bb_BB.json  UTG_2.5bb_BTN_8.5bb_BB.json  UTG_2.5bb_BTN_Call_SB_13.0bb_BB.json  UTG_2.5bb_CO_8.5bb_BB.json  UTG_2.5bb_MP_8.5bb_BB.json  UTG_2.5bb_SB_11.0bb_BB.json
gto_output/cash/6max_100bb_2_5x_500rake/vs_3B/BTN/: BTN_2.5bb_BB_11.0bb_BTN.json  BTN_2.5bb_SB_11.0bb_BTN.json  CO_2.5bb_BTN_Call_BB_13.0bb_CO_Call_BTN.json  CO_2.5bb_BTN_Call_BB_13.0bb_CO_FOLD_BTN.json  CO_2.5bb_BTN_Call_SB_13.0bb_CO_Call_BTN.json  CO_2.5bb_BTN_Call_SB_13.0bb_CO_FOLD_BTN.json  MP_2.5bb_BTN_Call_BB_13.0bb_MP_Call_BTN.json  MP_2.5bb_BTN_Call_BB_13.0bb_MP_FOLD_BTN.json  MP_2.5bb_BTN_Call_SB_13.0bb_MP_Call_BTN.json  MP_2.5bb_BTN_Call_SB_13.0bb_MP_FOLD_BTN.json  MP_2.5bb_CO_8.5bb_BTN.json  UTG_2.5bb_BTN_Call_BB_13.0bb_UTG_Call_BTN.json  UTG_2.5bb_BTN_Call_BB_13.0bb_UTG_FOLD_BTN.json  UTG_2.5bb_BTN_Call_SB_13.0bb_UTG_Call_BTN.json  UTG_2.5bb_BTN_Call_SB_13.0bb_UTG_FOLD_BTN.json  UTG_2.5bb_CO_8.5bb_BTN.json  UTG_2.5bb_MP_8.5bb_BTN.json
gto_output/cash/6max_100bb_2_5x_500rake/vs_3B/CO/: CO_2.5bb_BB_11.0bb_CO.json  CO_2.5bb_BTN_8.5bb_CO.json  CO_2.5bb_BTN_Call_BB_13.0bb_CO.json  CO_2.5bb_BTN_Call_SB_13.0bb_CO.json  CO_2.5bb_SB_11.0bb_CO.json  UTG_2.5bb_MP_8.5bb_CO.json
gto_output/cash/6max_100bb_2_5x_500rake/vs_3B/MP/: MP_2.5bb_BB_11.0bb_MP.json  MP_2.5bb_BTN_8.5bb_MP.json  MP_2.5bb_BTN_Call_BB_13.0bb_MP.json  MP_2.5bb_BTN_Call_SB_13.0bb_MP.json  MP_2.5bb_CO_8.5bb_MP.json  MP_2.5bb_SB_11.0bb_MP.json
gto_output/cash/6max_100bb_2_5x_500rake/vs_3B/SB/: CO_2.5bb_BTN_8.5bb_SB.json  MP_2.5bb_BTN_8.5bb_SB.json  MP_2.5bb_CO_8.5bb_SB.json  SB_3.0bb_BB_9.0bb_SB.json  UTG_2.5bb_BTN_8.5bb_SB.json  UTG_2.5bb_CO_8.5bb_SB.json  UTG_2.5bb_MP_8.5bb_SB.json
gto_output/cash/6max_100bb_2_5x_500rake/vs_3B/UTG/: UTG_2.5bb_BB_11.0bb_UTG.json  UTG_2.5bb_BTN_8.5bb_UTG.json  UTG_2.5bb_BTN_Call_BB_13.0bb_UTG.json  UTG_2.5bb_BTN_Call_SB_13.0bb_UTG.json  UTG_2.5bb_CO_8.5bb_UTG.json  UTG_2.5bb_MP_8.5bb_UTG.json  UTG_2.5bb_SB_11.0bb_UTG.json
gto_output/cash/6max_100bb_2_5x_500rake/vs_4B/BB/: BTN_2.5bb_BB_11.0bb_BTN_24.0bb_BB.json  CO_2.5bb_BB_11.0bb_CO_24.0bb_BB.json  CO_2.5bb_BTN_8.5bb_SB_21.0bb_BB.json  CO_2.5bb_BTN_Call_BB_13.0bb_CO_25.0bb_BTN_FOLD_BB.json  CO_2.5bb_BTN_Call_BB_13.0bb_CO_Call_BTN_AllIn_BB.json  CO_2.5bb_BTN_Call_BB_13.0bb_CO_FOLD_BTN_AllIn_BB.json  MP_2.5bb_BB_11.0bb_MP_24.0bb_BB.json  MP_2.5bb_BTN_8.5bb_SB_21.0bb_BB.json  MP_2.5bb_BTN_Call_BB_13.0bb_MP_25.0bb_BTN_FOLD_BB.json  MP_2.5bb_BTN_Call_BB_13.0bb_MP_Call_BTN_AllIn_BB.json  MP_2.5bb_BTN_Call_BB_13.0bb_MP_FOLD_BTN_AllIn_BB.json  MP_2.5bb_CO_8.5bb_BTN_20.0bb_BB.json  MP_2.5bb_CO_8.5bb_SB_21.0bb_BB.json  SB_3.0bb_BB_9.0bb_SB_22.0bb_BB.json  UTG_2.5bb_BB_11.0bb_UTG_24.0bb_BB.json  UTG_2.5bb_BTN_8.5bb_SB_21.0bb_BB.json  UTG_2.5bb_BTN_Call_BB_13.0bb_UTG_25.0bb_BTN_FOLD_BB.json  UTG_2.5bb_BTN_Call_BB_13.0bb_UTG_Call_BTN_AllIn_BB.json  UTG_2.5bb_BTN_Call_BB_13.0bb_UTG_FOLD_BTN_AllIn_BB.json  UTG_2.5bb_CO_8.5bb_BTN_20.0bb_BB.json  UTG_2.5bb_CO_8.5bb_SB_21.0bb_BB.json  UTG_2.5bb_MP_8.5bb_BTN_20.0bb_BB.json  UTG_2.5bb_MP_8.5bb_CO_20.0bb_BB.json  UTG_2.5bb_MP_8.5bb_SB_21.0bb_BB.json
gto_output/cash/6max_100bb_2_5x_500rake/vs_4B/BTN/: BTN_2.5bb_SB_11.0bb_BB_22.0bb_BTN.json  CO_2.5bb_BTN_8.5bb_BB_21.0bb_CO_FOLD_BTN.json  CO_2.5bb_BTN_8.5bb_CO_22.0bb_BTN.json  CO_2.5bb_BTN_8.5bb_SB_21.0bb_CO_FOLD_BTN.json  (+16 more)
gto_output/presolved/: .gitignore
scripts/: bulk-presolve.mjs  compact-presolved.mjs  dev.ps1  patch-mono-failures.mjs  prepare-release.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_server.rs  commands.rs  engine.rs  gto_charts.rs  lib.rs  main.rs  oauth.rs  types.rs
src-tauri/tests/: timeout_kill.rs
src/components/: ActionBar.tsx  ActionNavigator.tsx  AuthGate.tsx  BackendIndicator.tsx  BoardSelector.tsx  ComboDrillPanel.tsx  DrillMode.tsx  GameContextSelector.tsx  GtoChartBrowser.tsx  GuideModal.tsx  NodeLockEditor.tsx  PositionSelector.tsx  RangeEditorModal.tsx  RangeGrid.tsx  RunoutPicker.tsx  RunoutReportModal.tsx  SolveEtaBanner.tsx  SolveQualityBadge.tsx  SolverControls.tsx  SpotLibrary.tsx  StrategyPanel.tsx  TurnRiverCardSelector.tsx  UpdateBanner.tsx
src/hooks/: useGtoAutoRange.ts  useSolver.ts
src/lib/: aggregateRunouts.ts  appVersion.ts  auth.ts  backend.ts  comboDrill.ts  drill.ts  gameTree.ts  i18n.tsx  poker.ts  presolvedSpots.ts  ranges.ts  tauriEnv.ts
(+1599 files in other folders)
